# sphinx-markdown-tables

./: .gitignore  .pylintrc  README.md  pyproject.toml  screwdriver.yaml  setup.cfg  setup.py  sphinx_markdown_tables.py  tox.ini
sphinx_markdown_tables/: __init__.py  __version__.py
tests/: test__import.py  test__sphinx.py  test_process_tables.py
tests/fixtures/test__render_table__with_sphinx_markdown_tables/: conf.py
tests/fixtures/test__render_table__without_sphinx_markdown_tables_enabled/: conf.py  index.md
