[metadata]
author = Ryan Fox
author_email = ryan@foxrow.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = A Sphinx extension for rendering tables written in markdown
keywords = sphinx markdown tables
license = GPLv3
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
name = sphinx-markdown-tables
project_urls =
    Bug Reports = https://github.com/ryanfox/sphinx-markdown-tables/issues
    Say Thanks! = https://foxrow.com
    Source = https://github.com/ryanfox/sphinx-markdown-tables
url = https://github.com/ryanfox/sphinx-markdown-tables

# Note, the CI Pipeline will update the last digit of the version number automatically
version = 0.1.0

[options]
# Install requires should only contain abstract dependencies, specifying specific versions will likely break dependencies
# for other packages in the environment that require different versions.
install_requires =
    markdown>=2.6.11
    recommonmark
    setuptools>38.0.0

packages=
    sphinx_markdown_tables

python_requires = >="3.6"
zip_safe = True

[options.extras_require]
test =
    pytest
    pytest-cov
    sphinx-testing

[mypy]
ignore_missing_imports = True

[pycodestyle]
count = False
max-line-length = 160
statistics = True

[sdv4.version]
# CI Pipeline versioning plugin to use
version_plugin = SDV4_BUILD_NUMBER
